# CmakeLearn

./: CMakeLists.txt  README.md  main.cc
math/: CMakeLists.txt  MathFunctions.cc
